--- a/voxel-paper/src/main/resources/plugin.yml
+++ b/voxel-paper/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 #file: noinspection YAMLSchemaValidation
 name: VoxelEngine
 version: '${version}'
-main: sync.voxel.engine.paper.PaperPlugin
+main: sync.voxel.engine.paper.VoxelPaperPlugin
 api-version: '1.21'
 prefix: Voxel
 authors: [ VoxelSync ]
